--- a/test-app/main.css
+++ b/test-app/main.css
@@ -15,17 +15,36 @@ h1, h4, .out{
 img{
     margin: 10px 50px;
 }
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .input{
     width: 100px;
     height: 80px;
     display: block;
     text-align: center;
-    margin: 0 auto;
+
     font-family: Arial;
     font-size: 45px;
     border: 4px solid green;
     border-radius: 10px;
     outline: none;
+}
+.button{
+    display: block;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    outline: none;
+    background-color: red;
+    color: white;
+    font-family: Arial;
+    margin-left:30px;
+}
+.button:active{
+    background-color: green;
 }
 .out{
     margin: 5px 50px;
